# lane_detection

./: CMakeLists.txt  README.md  evaluate.py  inference.py  lane_dataset.py  lanenet_model.py  package.xml  train.py  val.py
dataset/: readme.txt
include/lane_detection/: lane_detection.h
launch/: lane_detection.launch
src/: lane_detection.cpp  lane_detection_node.cpp
